syntax = "proto3";

package colossusdb;
option go_package = "github.com/kuaishou/colossusdb/pb;pb";

import "google/api/annotations.proto";
import "teams/reco-arch/colossusdb/proto/common.proto";

message GetNodesRequest {
  string service_name = 1;
  repeated string az = 2;
}

message KwsInfo {
  string region = 1;
  string az = 2;
  string dc = 3;
}

message ServiceNode {
  string id = 1;
  string protocol = 2;
  string host = 3;
  int32 port = 4;
  string payload = 5;
  double weight = 6;
  string shard = 7;
  string location = 8;
  int64 initial_live_time = 9;
  KwsInfo kws = 10;
  string paz = 11;
}

message GetNodesResponse {
  ErrorStatus status = 1;
  map<string, ServiceNode> nodes = 2;
}

service UniversalDiscovery {
  rpc GetNodes(GetNodesRequest) returns (GetNodesResponse) {
    option (google.api.http) = {
      get : "/v1/get_nodes"
    };
  }
}
